<resources>
    <string name="app_name">Calculadora de Sueldos</string>
    <string name="escribe_tu_salario">Escribe tu Salario</string>
    <string name="savings">Ahorros minimos: </string>
    <string name="Debts">Maximo para deudas: </string>
    <string name="Expenses">Maximo para Gastos: </string>
    <string name="tss_deduction">AFP y ARS: </string>
    <string name="law_deduction">Impuesto sobre la renta: </string>
    <string name="real_salary">Salario Real </string>
    <string name="calculate">Calcular</string>
    <string name="button_text">Calcula tu sueldo</string>
    <string name="introduce_tu_sueldo">Introduce tu sueldo</string>
    <string name="sueldo_actual">Sueldo Actual</string>
    <string name="gastos_fijos">Gastos fijos</string>
    <string name="cantidad">Introduce un monto</string>
    <string name="add_Expenses">Añadir</string>
    <string name="calcular_sueldo_real">Calcular</string>
    <string name="nombre">Nombre</string>
    <string name="limpiar">Borrar</string>
    <string name="expenses_list">Ver gastos</string>
    <string name="initial_state">$ 0</string>
    <string name="deduction_title">Deducciones</string>
    <string name="flujo_de_dinero">Flujo ideal de dinero</string>
    <string name="introduce_tus_datos">Introduce tus datos</string>
    <string name="alertas">Alertas</string>
    <string name="gastos_variables">Gastos Variables</string>
    <string name="disponible">Disponible</string>
    <string name="desglose_de_gastos">Desglose de Gastos</string>
    <string name="ver_gastos_fijos">Ver gastos fijos</string>
    <string name="introduce_un_monto">Introduce Un monto</string>
    <string name="ver_gastos_variables">ver gastos variables</string>
    <string name="gastos_variables_desglose">Gastos Variables</string>
</resources>
